--- a/css/edit.css
+++ b/css/edit.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background: linear-gradient(135deg, #a8edea, #fed6e3);
+  /* background: linear-gradient(135deg, #a8edea); */
   min-height: 100vh;
   display: flex;
   justify-content: center;
@@ -19,7 +19,7 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 80%;
+  width: 40%;
   max-width: 900px;
   background: #ffffffcc;
   backdrop-filter: blur(8px);
